--- a/Lab_3/package.json
+++ b/Lab_3/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js",
+    "dev": "nodemon server.js",
+    "start": "node server.js",
     "seed": "node -e \"import('./seed.js').then(seed => seed.seed().catch(console.log));\""
   },
   "author": "Sanjeet Vinod Jain 20012768",
