--- a/Lab_6/client/package.json
+++ b/Lab_6/client/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.8.7",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.7",
     "class-variance-authority": "^0.7.0",
