--- a/Lab_7/package.json
+++ b/Lab_7/package.json
@@ -21,8 +21,7 @@
     "dayjs": "^1.11.10",
     "flat": "^6.0.1",
     "graphql": "^16.8.1",
-    "redis": "^4.6.10",
-    "vite": "^5.0.0"
+    "redis": "^4.6.10"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
