--- a/Lab_7/package.json
+++ b/Lab_7/package.json
@@ -8,20 +8,23 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "seed": "node -e \"import('./seed.js').then(seed => seed.seed().catch(console.log));\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@apollo/server": "^4.9.5",
+    "@apollo/server": "^4.9.4",
     "axios": "^1.5.0",
     "blueimp-md5": "^2.19.0",
     "dayjs": "^1.11.10",
+    "express": "^4.18.2",
     "flat": "^6.0.1",
     "graphql": "^16.8.1",
-    "redis": "^4.6.10"
+    "mongodb": "^6.1.0",
+    "redis": "^4.6.9"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
