--- a/Lab_7/client/package.json
+++ b/Lab_7/client/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "lab6": "file:..",
     "lucide-react": "^0.294.0",
@@ -47,6 +48,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "sharp": "^0.33.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
