--- a/Lab_7/package.json
+++ b/Lab_7/package.json
@@ -7,7 +7,7 @@
     "client:install": "npm install --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
-    "client": "npm start --prefix client",
+    "client": "npm run build --prefix client &  npm start --prefix client ",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "seed": "node -e \"import('./seed.js').then(seed => seed.seed().catch(console.log));\""
   },
